Make sure pre elements don't overflow out of the content container.

--- a/static/style.css
+++ b/static/style.css
@@ -73,6 +73,12 @@ header > div
     padding: 0;
 }
 
+#content pre
+{
+    white-space: pre-wrap;
+    word-wrap: break-word;
+}
+
 #content h1
 {
     margin: 0 0 1em 0;
